style.css
:root {
  --color-sky: #0d0d0d;
  --color-shadow: #2b1d1a;
  --color-primary: #e84a2f;
  --color-secondary: #f47a59;
  --color-accent: #fd9a7e;
  --color-text: #fcfcfc;
  --color-background: rgba(114, 114, 114, 0.103);
}

body {
  background-color: var(--color-sky);
  color: var(--color-text);
  display: flex;
  flex-direction: row;
  align-items: center;
}

h1,
h2,
h3 {
  color: var(--color-primary);
}

a {
  color: var(--color-accent);
}

button {
  background-color: var(--color-primary);
  color: var(--color-text);
  border: none;
  padding: 10px 20px;
  margin-top: 10px;
  cursor: pointer;
  transition: background-color 0.3s ease;
  border-radius: 5px;
  font-weight: bold;
}

button:hover {
  background-color: var(--color-secondary);
}

.text-content {
  text-align: right;
}

#left-side {
  position: relative;
  background: url(https://plus.unsplash.com/premium_vector-1711987653726-dcf4a1549dfd?q=80&w=687&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
    no-repeat center/cover;
  color: white;
  width: 45%;
  height: 100vh;
}

#left-side::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.3);
}

.text-content {
  text-align: right;
  position: relative;
  z-index: 1;
  width: max(45%, 400px);
  margin-bottom: 1rem;
  color: #ffffff;
}

section {
  height: 100vh;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  padding: 2rem;
}

#right-side {
  background-image: linear-gradient(
      0deg,
      transparent 24%,
      var(--color-background) 25%,
      var(--color-background) 26%,
      transparent 27%,
      transparent 74%,
      var(--color-background) 75%,
      var(--color-background) 76%,
      transparent 77%,
      transparent
    ),
    linear-gradient(
      90deg,
      transparent 24%,
      var(--color-background) 25%,
      var(--color-background) 26%,
      transparent 27%,
      transparent 74%,
      var(--color-background) 75%,
      var(--color-background) 76%,
      transparent 77%,
      transparent
    );
  background-size: 55px 55px;
}

form {
  display: flex;
  flex-direction: column;
  gap: 10px;
  background-color: var(--color-shadow);
  padding: 1.2rem;
  border-radius: 10px;
  box-shadow: 0 0 20px rgba(232, 74, 47, 0.2);
  max-width: 400px;
  width: 100%;
}

.form-row {
  display: flex;
  width: 100%;
  gap: 15px;
}

form label {
  position: relative;
  width: 100%;
}

form label input {
  width: 100%;
  padding: 10px 10px 20px 10px;
  outline: 0;
  border: 1px solid #4a3f3c;
  border-radius: 5px;
  background-color: var(--color-sky);
  color: var(--color-text);
  font-size: 1rem;
  font-family: monospace;
}

form label input + span {
  position: absolute;
  left: 10px;
  top: 15px;
  color: grey;
  font-size: 0.9em;
  cursor: text;
  transition: 0.3s ease;
}

form label input:placeholder-shown + span {
  top: 15px;
  font-size: 0.9em;
}

form label input:focus + span,
form label input:not(:placeholder-shown) + span {
  top: 30px;
  font-size: 0.7em;
  font-weight: 600;
}

form label input:valid + span {
  color: green;
}

.small-text {
  font-size: 0.8rem;
  color: var(--color-secondary);
}

